# lipvm

./: .gitignore  README.md  example.logo  exampledummyloop.logo  examplewithloop.logo  main.py  notes.md  pyproject.toml  requirements.txt
.langium-prototype/lipvm.implts/: README.md  package.json  tsconfig.json  tsconfig.test.json
.langium-prototype/lipvm.implts/src/: model.ts
backend/: Environment.py  Execution.py  LipVM.py  annotation.py  environment.py  interpreter.py  lipvm.py  parser.py  protocols.py
backend/instructions/: AbstractInstruction.py  Snapshot.py  Value.py
langium-prototype/: README.md
langium-prototype/lipvm.implts/: jest.config.ts  package-lock.json
langium-prototype/lipvm.implts/src/: app.ts  (+1 more)
languages/minilogo/: Compiler.py  Language.g4  Language.interp  LanguageInterpreter.py  LanguageLexer.interp  LanguageLexer.py  LanguageLexer.tokens  LanguageParser.py  LanguageVisitor.py  MinilogoIDE.py
languages/statemachine/: Language.g4  Language.interp  Language.tokens  LanguageInterpreter.py  LanguageLexer.interp  LanguageLexer.py  LanguageLexer.tokens  LanguageParser.py  LanguageVisitor.py
languages/sysml-vtwo/: SysMLv2Lexer.g4  SysMLv2Parser.g4
languages/sysml_vtwo/: LanguageInterpreter.py  SysMLv2Lexer.interp  SysMLv2Lexer.py  SysMLv2Parser.interp  SysMLv2Parser.py  SysMLv2Parser.tokens  SysMLv2ParserVisitor.py
src/: Bytecode.py  Environment.py  Execution.py  LipVM.py  Stack.py
src/instructions/: AbstractInstruction.py  Snapshot.py  Value.py
tests/: interpreter_test.py  interpreter_tests.py  statemachine_interpreter_test.py
(+68 files in other folders)
